Fixed homepage article blurb spacing

--- a/src/styles/homepage.sass
+++ b/src/styles/homepage.sass
@@ -15,6 +15,8 @@ a.article-blurb
 
     line-height: 1
 
+    margin: 0
+
     span
       color: hsl(0,0,80%)
 
